<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/iv_doctor"
        android:layout_width="311dp"
        android:layout_height="238dp"
        android:contentDescription="@string/image"
        android:src="@drawable/doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@id/iv_doctor"
        app:layout_constraintBottom_toTopOf="@id/pb_progress"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ProgressBar
        android:id="@+id/pb_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:progress="10"
        app:layout_constraintTop_toBottomOf="@id/tv_percent"
        />

    <TextView
        android:id="@+id/personal"
        android:layout_width="277dp"
        android:layout_height="96dp"
        android:text="@string/personalized_attention"
        android:gravity="center_vertical"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pb_progress" />

    <ImageView
        android:id="@+id/sunmoon"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="@id/personal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/personal" />
    <TextView
        android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_the_form_to_obtain_a_personalized_plan_from_our_medical_professionals"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintTop_toBottomOf="@id/personal"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/i_usually_sleep"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintTop_toBottomOf="@id/complete"
        app:layout_constraintStart_toStartOf="parent"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sleep"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/rb_six_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_hours"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@id/sleep"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioButton
            android:id="@+id/rb_seven_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_8_hours"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@id/rb_six_hours"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioButton
            android:id="@+id/rb_nine_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9_hours"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@id/rb_seven_hours"
            app:layout_constraintStart_toStartOf="parent"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>