<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_intro"
        android:layout_width="351dp"
        android:layout_height="324dp"
        android:contentDescription="@string/image"
        android:src="@drawable/walking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:gravity="center"
        android:text="@string/do_you_want_to_get_active_in_a_healthy_way"
        app:layout_constraintTop_toBottomOf="@id/iv_intro"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/we_can_help_you_achieve_it"
        app:layout_constraintTop_toBottomOf="@id/tv_active"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:height="50dp"
        android:gravity="center"
        android:text="@string/get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_help" />
</androidx.constraintlayout.widget.ConstraintLayout>